test/good/generics/return02.px

func f<T>(Bool b) T def
    if b do
        return 1f
    else do
        return -10^^18

print f(true), f(false)
