test/bad/functions/type3.px

func apply(Bool->Bool f, Bool b) Bool def
    return f(b)

func f() Bool def
    return true

apply(f, true)
